fix grid visible

--- a/src/components/productCard/product-card.module.scss
+++ b/src/components/productCard/product-card.module.scss
@@ -1,22 +1,32 @@
 @use "../../styles/utils/_vars.scss" as *;
 @use "../../styles/fonts/typography.scss" as *;
 @use "../../styles/utils/mixins" as *;
-
-$card-width: 272px;
+@use "../../styles/utils/grid.scss" as *;
 
 .card {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   box-sizing: border-box;
-  min-width: $card-width;
-  max-width: $card-width;
+  min-width: $card;
   width: 100%;
   border: 1px solid $elements-color;
   transition: box-shadow 0.3s ease-in-out;
   outline: none;
   background-color: $white-color;
   cursor: pointer;
+
+  @include onTablet {
+    @media (max-width: 767px) {
+      $card: 288px;
+      min-width: $card;
+    }
+
+    @media (max-width: 1199px) {
+      $card: 229px;
+      min-width: $card;
+    }
+  }
 
   &:hover {
     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.05);
@@ -29,7 +39,6 @@ $card-width: 272px;
   }
 
   &__image {
-    width: 208px;
     height: 208px;
     align-self: center;
     padding-bottom: 24px;
